--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', sans-serif;
     background-color:cornsilk;
 }
 
@@ -11,6 +11,7 @@ a, u {
 .container{
     margin: auto;
     width: 50%;    
+    text-align: justify;
 }
 
 @media screen and (max-width: 600px) {
